Fix width gap between member images and their captions

--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,7 @@ tr:nth-child(2n) {
 
 .members figure {
   display: inline-block;
+  overflow: hidden;
 }
 
 .members img {
